feat(AM-31): added sign in form with validation

--- a/apps/admin/public/locales/uk/validation.json
+++ b/apps/admin/public/locales/uk/validation.json
@@ -1,3 +1,7 @@
 {
-    "required": "Це поле є обов'язковим"
+    "required": "Це поле є обов'язковим",
+    "email.required": "Електронна пошта є обов'язковою",
+    "email.invalid": "Невірний формат електронної пошти",
+    "password.required": "Пароль є обов'язковим",
+    "password.minLength": "Пароль повинен містити принаймні 8 символів"
 }
