--- a/apps/admin/public/locales/en/validation.json
+++ b/apps/admin/public/locales/en/validation.json
@@ -1,3 +1,7 @@
 {
-    "required": "This field is required"
+    "required": "This field is required",
+    "email.required": "Email is required",
+    "email.invalid": "Invalid email format",
+    "password.required": "Password is required",
+    "password.minLength": "Password must be at least 8 characters"
 }
